# Iki_DQ_Check

./: ,gitignore  .gitignore  ARTICLE.MD  LICENSE  README.MD  cli.py  config.yaml  dq_cli.py  pyproject.toml  report_errors.json  requirements.txt  sample.py  sample_data.csv  structure.py
examples/: sample_data.json
src/Iki_DQ_Check/: __init__.py  app.py  config.py  facade.py
src/Iki_DQ_Check/checks/: __init__.py  advanced.py  lite.py  standard.py
src/Iki_DQ_Check/cli/: __init__.py  args.py  loaders.py  output.py  runner.py
src/Iki_DQ_Check/core/: __init__.py  base.py  pipeline.py
src/iki_dq_check.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_advanced.py  test_cli.py  test_lite.py  test_loaders.py  test_pipeline.py  test_registry.py  test_standard.py
